Updated sign tiles + added container tiles
- Updated sign data to support the back side of signs
- Signs now use the signs tag
- Added tile data support for all tiles that hold items
  - Requires Paper
  - Still a WIP