@@ -3,10 +3,12 @@ package com.strangeone101.platinumarenas.blockentity;
 import com.google.common.io.ByteArrayDataOutput;
 import com.google.common.io.ByteStreams;
 import com.strangeone101.platinumarenas.PlatinumArenas;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.bukkit.DyeColor;
 import org.bukkit.block.Sign;
 import org.bukkit.block.TileState;
+import org.bukkit.block.sign.Side;
+import org.bukkit.util.StringUtil;
 
 import java.io.ByteArrayOutputStream;
 import java.nio.ByteBuffer;
@@ -32,13 +34,20 @@ public class SignWrapper implements Wrapper<Sign, SignWrapper.InternalSign> {
             color += Byte.MAX_VALUE;
         }
 
-        out.write((byte)sign.color.ordinal());
+        out.write(color);
         out.write((byte)sign.lines.size());
         for (String s : sign.lines) {
             byte[] bytes = s.getBytes(StandardCharsets.UTF_8);
             out.writeInt(bytes.length);
             out.write(bytes);
         }
+        byte backColor = (byte)sign.backColor.ordinal();
+
+        if (sign.backGlow) {
+            backColor += Byte.MAX_VALUE;
+        }
+        out.write(backColor);
+
         return out.toByteArray();
     }
 
@@ -51,7 +60,20 @@ public class SignWrapper implements Wrapper<Sign, SignWrapper.InternalSign> {
                 sign.glow = true;
             }
         }
-        sign.lines = Arrays.asList(baseTileState.getLines());
+        sign.lines = new ArrayList<>(List.of(baseTileState.getLines()));
+        if (baseTileState.getSide(Side.BACK).getLines().length > 0) {
+            sign.backColor = baseTileState.getSide(Side.BACK).getColor();
+            if (baseTileState.getSide(Side.BACK).isGlowingText()) {
+                sign.backGlow = true;
+            }
+
+            while (sign.lines.size() < 4) { //So the back lines don't get appended to the front
+                sign.lines.add("");
+            }
+
+            //Add the back lines
+            sign.lines.addAll(Arrays.asList(baseTileState.getSide(Side.BACK).getLines()));
+        }
         return sign;
     }
 
@@ -81,16 +103,33 @@ public class SignWrapper implements Wrapper<Sign, SignWrapper.InternalSign> {
             String line = new String(byteArray, StandardCharsets.UTF_8);
             cache.lines.add(line);
         }
+
+        if (length > 4) { //If the length is more than 4, it has lines on the back
+            byte byteBackColor = buffer.get();
+            if (byteBackColor < 0) {
+                byteBackColor -= Byte.MAX_VALUE;
+                cache.backGlow = true;
+            }
+            DyeColor backColor = DyeColor.values()[byteBackColor];
+            cache.backColor = backColor;
+        }
         return cache;
     }
 
     @Override
     public Sign place(Sign baseTileState, InternalSign cache) {
         baseTileState.setColor(cache.color);
-        for (int i = 0; i < cache.lines.size(); i++) {
+        for (int i = 0; i < Math.min(cache.lines.size(), 4); i++) {
             baseTileState.setLine(i, cache.lines.get(i));
         }
         if (mcVersion >= 1170) baseTileState.setGlowingText(cache.glow);
+        if (mcVersion >= 1200 && cache.lines.size() > 4) {
+            for (int i = 0; i < cache.lines.size() - 4; i++) {
+                baseTileState.getSide(Side.BACK).setLine(i, cache.lines.get(i + 4));
+            }
+            baseTileState.getSide(Side.BACK).setColor(cache.backColor);
+            baseTileState.getSide(Side.BACK).setGlowingText(cache.backGlow);
+        }
         return baseTileState;
     }
 
@@ -106,7 +145,20 @@ public class SignWrapper implements Wrapper<Sign, SignWrapper.InternalSign> {
 
     protected static class InternalSign {
         private DyeColor color;
+        private DyeColor backColor = DyeColor.BLACK;
         private List<String> lines = new ArrayList<>();
         private boolean glow = false;
+        private boolean backGlow = false;
+
+        @Override
+        public String toString() {
+            return "InternalSign{" +
+                    "color=" + color +
+                    ", backColor=" + backColor +
+                    ", lines=" + lines +
+                    ", glow=" + glow +
+                    ", backGlow=" + backGlow +
+                    '}';
+        }
     }
 }
